--- a/app/views/users/policy.html.erb
+++ b/app/views/users/policy.html.erb
@@ -12,15 +12,15 @@
     <strong>PRIVACY POLICY</strong>
 </p>
 <p>
-    ADKM, Inc. (<strong><em>Harry’s</em></strong>) considers the privacy and security of user information an important component of the services offered at its
-    website, www.harry’s.com (the <strong><em>Site</em></strong>). The following information explains how Harry’s collects and uses information obtained from
+    SEO,. (<strong><em>SEO EXPERTS AUSTRALIA</em></strong>) considers the privacy and security of user information an important component of the services offered at its
+    website, www.seoexpertsaustralia.com (the <strong><em>Site</em></strong>). The following information explains how we collects and uses information obtained from
     users in connection with services available at the Site (taken together, the <strong><em>Service</em></strong>).
 </p>
 <p>
     <strong>Information Collected.</strong>
 </p>
 <p>
-    At your election, you may request additional information about Harry’s. When you do so, you may need to submit certain information or data to Harry’s, for
+    At your election, you may request additional information about SEO Experts Australia. When you do so, you may need to submit certain information or data to us, for
     example, your contact information (collectively, <strong><em>User Data</em></strong>).
 </p>
 <p>
@@ -35,36 +35,36 @@
     Harry’s uses User Data to respond to your inquiries for additional information.
 </p>
 <p>
-    Harry’s uses "traffic data" to help diagnose problems with its server, analyze trends and administer the Site. Your IP address is not linked to personally
+    We use "traffic data" to help diagnose problems with its server, analyze trends and administer the Site. Your IP address is not linked to personally
     identifiable information, but is used to gather broad demographic data and to monitor statistics to improve the Site and Service.
 </p>
 <p>
     <strong>Sharing of Information.</strong>
 </p>
 <p>
-    Currently, Harry’s will not share personally identifiable information with any third party for commercial purposes. Harry’s may, however, disclose
+    Currently, we will not share personally identifiable information with any third party for commercial purposes. Harry’s may, however, disclose
     personally identifiable data if (1) reasonably necessary to perform the Service, (2) authorized by you, (3) otherwise permitted under this Privacy Policy
-    or (4) Harry’s is required to do so by law or regulation, or in the good faith belief that such action is necessary to (i) conform or comply with
+    or (4) We are required to do so by law or regulation, or in the good faith belief that such action is necessary to (i) conform or comply with
     applicable laws, regulations or legal process, (ii) protect or defend the rights or property of Harry’s or any other user or (iii) enforce the Terms of
     Use.
 </p>
 <p>
-    Harry’s may transfer personally identifiable information to any successor to all or substantially all of its business or assets that concern the Service.
+    We may transfer personally identifiable information to any successor to all or substantially all of its business or assets that concern the Service.
 </p>
 <p>
     <strong>Security.</strong>
 </p>
 <p>
-    Information collected by Harry’s is stored in secure operating environments that are not made generally available to the public. Unfortunately, no data
-    transmission over the Internet can be guaranteed to be 100% secure. As a result, Harry’s cannot ensure the security of any information you provide, and you
-    do so at your own risk. Once Harry’s receives your transmission, it will make reasonable efforts to ensure its security on its systems.
+    Information collected by us is stored in secure operating environments that are not made generally available to the public. Unfortunately, no data
+    transmission over the Internet can be guaranteed to be 100% secure. As a result, we cannot ensure the security of any information you provide, and you
+    do so at your own risk. Once we receive your transmission, it will make reasonable efforts to ensure its security on its systems.
 </p>
 <p>
     <strong>Third Party Sites.</strong>
 </p>
 <p>
     The Site may permit you to link to other websites on the Internet, and other websites may contain links to the Site. These other websites are not under
-    Harry’s control. The privacy and security practices of websites linked to or from the Site are not covered by this Privacy Policy, and Harry’s is not
+    our control. The privacy and security practices of websites linked to or from the Site are not covered by this Privacy Policy, and Harry’s is not
     responsible for the privacy or security practices or the content of such websites.
 </p>
 <p>
@@ -83,20 +83,20 @@
     <strong>Opt-Out.</strong>
 </p>
 <p>
-If you change your mind about Harry’s use of User Data volunteered by you, you may Harry’s send an email to    <a href="mailto:help@harry's.com">help@harry’s.com</a><strong> </strong>with your electronic mail address.
+If you change your mind about the use of User Data volunteered by you, you may send an email to    <a href="mailto:info@tajbarr.com">info@tajbarr.com</a><strong> </strong>with your electronic mail address.
 </p>
 <p>
     <strong>Changes.</strong>
 </p>
 <p>
-    Harry’s reserves the right to change or update this Privacy Policy at any time by posting a notice at the Site. Information collected by the Service is
+    We reserve the right to change or update this Privacy Policy at any time by posting a notice at the Site. Information collected by the Service is
     subject to the Privacy Policy in effect at the time of use.
 </p>
 <p>
     <strong>Contact.</strong>
 </p>
 <p>
-    If you have any questions regarding this Privacy Policy or your dealings at this Site, please contact Harry’s info@harry’s.com.
+    If you have any questions regarding this Privacy Policy or your dealings at this Site, please contact us at info@tajbarr.com
 </p>
 
 <p>
