--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,12 @@
 <!--[if IE 9 ]>    <html class="ie9 <%= @bodyId %>"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html class="<%= @bodyId %>"> <!--<![endif]-->
 <head>
-        <title>Harry&#8217;s &ndash; Tell Friends, Shave for Free</title>
+        <title>SEO IS ABOUT TO CHANGE</title>
         <link rel="icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
         <link rel="shortcut icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
 
-        <meta property="og:title" content="Harry’s is coming!"/>
-        <meta property="og:description" content="Shaving is evolving. Didn’t want to leave you all behind. Check out Harry’s here."/>
+        <meta property="og:title" content="SEO IS ABOUT TO CHANGE!"/>
+        <meta property="og:description" content="Seo is evolving. Didn’t want to leave you all behind. Check out what is happening here."/>
         <meta property="og:image" content="<%= asset_path("refer/truman.png") %>"/>
         <meta property="og:url" content="<%= root_url %>"/>
         <% if @is_mobile %>
