--- a/app/views/user_mailer/signup_email.html.erb
+++ b/app/views/user_mailer/signup_email.html.erb
@@ -9,7 +9,7 @@
 </head>
 
 <body style="margin: 0; padding: 0;">
-    <span style='font-size: 0; line-height: 0; height: 0; width: 0;'>You'll be first to know when we launch. SEO is evolving. Tell your friends and get SEO services for free.</span>
+    <span style='font-size: 0; line-height: 0; height: 0; width: 0;'>You'll be first to know when we launch. SEO is evolving. Tell your friends and earn SEO services!</span>
     <table width="100%" cellspacing='0' cellpadding='0' border="0" bgcolor="#ebebeb" style="background-color: #ebebeb; padding: 73px 15px; margin: 0;">
         <tr>
             <td align="center">
