--- a/app/views/users/refer.html.erb
+++ b/app/views/users/refer.html.erb
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="content">
-        <p class="logo brandon">Harry&#8217;s</p>
+        <p class="logo brandon">WE</p>
         <p class="byline brandon">THANK YOU FOR SIGNING UP</p>
     </div>
 </div>
@@ -8,14 +8,14 @@
 <div class="hero">
     <div class="page-content clearfix">
         <div class="mammoth">
-            <span class="need brandon">Shaving Is<br>Evolving</span>
+            <span class="need brandon">SEO Is<br>Changing</span>
         </div>
         <div class="share-wrap">
             <p class="why brandon">Don't leave your friends behind</p>
             <p class="title brandon">INVITE FRIENDS &<br>Earn Product</p>
-            <p class="subtitle brandon">Share your unique link via email, Facebook<br>or Twitter and earn Harry's goods for<br>each friend who signs up.</p>
+            <p class="subtitle brandon">Share your unique link via email, Facebook<br>or Twitter and earn SEO services for<br>each friend who signs up.</p>
             <div class="copy-link brandon"><%= root_url %>?ref=<%= @user.referral_code %></div>
-            <% twitter_message = "#Shaving is evolving. Excited for @harrys to launch." %>
+            <% twitter_message = "#SEO is evolving. Excited to find out more @tajbarr." %>
             <div class="social-links">
                 <a href="http://www.facebook.com/sharer/sharer.php?u=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&title=Harrys" class="fb" target="_blank"></a>
                 <div class="sep"></div>
@@ -45,7 +45,7 @@
     <div class="page-content">
         <p class="callout brandon">Here's How It Works:</p>
         <ul class="products clearfix">
-            <li class="title brandon"><p class="friends">Friends Joined</p><p class="rewards">Harry's Product</p></li>
+            <li class="title brandon"><p class="friends">Friends Joined</p><p class="rewards">SEO Services</p></li>
             <% stops.each do |stop| %>
                 <li class="product brandon <% if stop["selected"] %>selected<% end %> <% if stop["class"] == 'five' %>last<% end %>">
                     <div class="circle"><%= stop["count"] %></div>
@@ -82,7 +82,7 @@
         <% end %>
         <p class="check brandon">Keep checking</p>
 
-        <p class="ship brandon">We ship to the U.S. (& Canada Soon)</p>        
+        <p class="ship brandon">“There is no defined limit as to how much money you can acquire in what little time. If any definition exists it does so just in your mind and in your emotions.” Stuart Wilde</p>        
         <a class="policy brandon" href="/privacy-policy" target="_blank">Privacy Policy</a>
     </div>
 </div>
