--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="hero">
-    <p class="large brandon">SEO is about to change/p>
+    <p class="large brandon">A new SEO Service is coming</p>
     <p class="small brandon">Our one simple goal is to make your business more profitable<br>Since Like...Right Now.</p>
 </div>
 
