--- a/app/views/users/policy.html.erb
+++ b/app/views/users/policy.html.erb
@@ -32,7 +32,7 @@
     <strong>Use of Information.</strong>
 </p>
 <p>
-    Harry’s uses User Data to respond to your inquiries for additional information.
+    We may use User Data to respond to your inquiries for additional information.
 </p>
 <p>
     We use "traffic data" to help diagnose problems with its server, analyze trends and administer the Site. Your IP address is not linked to personally
@@ -42,7 +42,7 @@
     <strong>Sharing of Information.</strong>
 </p>
 <p>
-    Currently, we will not share personally identifiable information with any third party for commercial purposes. Harry’s may, however, disclose
+    Currently, we will not share personally identifiable information with any third party for commercial purposes. We may, however, disclose
     personally identifiable data if (1) reasonably necessary to perform the Service, (2) authorized by you, (3) otherwise permitted under this Privacy Policy
     or (4) We are required to do so by law or regulation, or in the good faith belief that such action is necessary to (i) conform or comply with
     applicable laws, regulations or legal process, (ii) protect or defend the rights or property of Harry’s or any other user or (iii) enforce the Terms of
@@ -71,7 +71,7 @@
     <strong>IP Addresses and Cookies.</strong>
 </p>
 <p>
-    Harry’s may use your IP address to help diagnose problems with its server, and to administer the Site. Your IP address is used to help identify you and to
+    We may use your IP address to help diagnose problems with its server, and to administer the Site. Your IP address is used to help identify you and to
     gather broad demographic information. IP addresses are also used to provide an audit trail in the case of any attempted illegal or unauthorized use of the
     Site.
 </p>
@@ -106,7 +106,7 @@ If you change your mind about the use of User Data volunteered by you, you may s
     <strong>Acceptance of Terms.</strong>
 </p>
 <p>
-    The following terms and conditions govern all use of the www.harrys.com website (the <strong><em>Site</em></strong>). The Site is offered subject to
+    The following terms and conditions govern all use of the www.tajbarr.com website (the <strong><em>Site</em></strong>). The Site is offered subject to
     acceptance without modification of any of the terms and conditions contained herein or all other operating rules, policies and procedures that may be
     published from time to time on this Site by ADKM, Inc. (<strong><em>Harry’s</em></strong>) (collectively, the <strong><em>Terms of Use</em></strong>).
 </p>
