--- a/app/views/user_mailer/signup_email.html.erb
+++ b/app/views/user_mailer/signup_email.html.erb
@@ -88,7 +88,7 @@
                     <tr>
                         <td style="padding: 18px 0 100px; font-family: 'Brandon Grotesque', 'Helvetica Neue', 'Helvetica', 'Arial', serif; font-size: 14px; letter-spacing: 0.05em; color: #6c6c6c; text-decoration: none">
                             <center>
-                                <a href="http://www.harrys.com" style="font-family: 'Brandon Grotesque', 'Helvetica Neue', 'Helvetica', 'Arial', serif; font-size: 13px; color: #6c6c6c; text-decoration: none">Harrys.com</a> | <a href="tel:2151234567" style="font-family: 'Brandon Grotesque', 'Helvetica Neue', 'Helvetica', 'Arial', serif; font-size: 13px; color: #6c6c6c; text-decoration: none">(888) 212-6855</a>
+                                <a href="http://www.seo.tajbarr.com" style="font-family: 'Brandon Grotesque', 'Helvetica Neue', 'Helvetica', 'Arial', serif; font-size: 13px; color: #6c6c6c; text-decoration: none">tajbarr.com</a> | <a href="tel:2151234567" style="font-family: 'Brandon Grotesque', 'Helvetica Neue', 'Helvetica', 'Arial', serif; font-size: 13px; color: #6c6c6c; text-decoration: none">(888) 212-6855</a>
                             </center>
                         </td>
                     </tr>
