--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div class="hero">
     <p class="large brandon">A new SEO Service is coming</p>
-    <p class="small brandon">Our one simple goal is to make your business more profitable<br>Since Like...Right Now.</p>
+    <p class="small brandon">Our only goal is to make your business more profitable<br>Since Like...Right Now.</p>
 </div>
 
 <div class="form-wrap clearfix <%= "ended" if Rails.application.config.ended %>">
