--- a/app/views/users/refer.html.erb
+++ b/app/views/users/refer.html.erb
@@ -8,7 +8,7 @@
 <div class="hero">
     <div class="page-content clearfix">
         <div class="mammoth">
-            <span class="need brandon">SEO IS<br>ALWAYS EVOLVING</span>
+            <span class="need brandon">"A flower does not think of competing with the<br>flower next to it - it just blooms" Unknown</span>
         </div>
         <div class="share-wrap">
             <p class="why brandon">Don't leave your friends behind</p>
